--- a/style.css
+++ b/style.css
@@ -1,24 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
+
 :root{
-    --bg-light: #2F3061;
-    --bg-mid: #212245;
-    --bg-dark: #07070E;
+    --bg-light: #313258;
+    --bg-mid: #222242;
+    --bg-dark: #0e0e1a;
     --row-height: 130px;
     --row-padding: 15px;
-    --transition-time: .3s;
-    --first-place: gold;
-    --second-place: cyan;
-    --third-place: greenyellow;
+    --transition-time: .35s;
+    --first-place: rgb(224, 167, 8);
+    --second-place: rgb(31, 192, 192);
+    --third-place: rgb(19, 207, 75);
+    --podium-width: 600px;
 }
 *{
     box-sizing: border-box;
     margin: 0;
+    font-family: 'Source Serif Pro', serif;
+    color: #fff;
+}
+
+body{
+    background-color: var(--bg-dark);
+    min-height: 100vh;
 }
 .container{
-    background-color: var(--bg-dark);
     height: 100%;
     width: 100%;
     display: grid;
     place-items: center;
+    background-color: var(--bg-dark);
 }
 
 i.hide{
@@ -38,20 +48,39 @@ i.fa-chevron-down{
     flex-direction: column;
     background-color: var(--bg-mid);
     width: 100%;
-    max-width: 800px;;
-    padding: 20px;
+    max-width: 1000px;
+    padding: 20px 40px;
     border-radius: 50px;
 }
 
 .leaderboard > :first-child{
     padding: 20px 10px;
-    border-bottom: 2px solid var(--bg-light);
-    font-size: 1.2rem;
+    border-bottom: 4px solid var(--bg-light);
+    font-weight: 600;
+    color: #f9f9f9;
+    letter-spacing: 1px;
+    font-size: 1.4rem;
 }
 
 .summoners >:last-child{
     border-bottom: 0px;
 }
+
+
+.main {
+    width: 100%;
+    padding:var(--row-padding);
+    display: grid;
+    grid-template-columns: 1fr 1.5fr 2fr 1fr 1fr;
+}
+
+.main > *{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+}
+
 
 .player-row{
     display: grid;
@@ -60,31 +89,18 @@ i.fa-chevron-down{
     border-bottom: 2px solid var(--bg-light);
 }
 
-.player-row.active{
+/* .player-row.active{
     grid-template-rows: repeat(1, var(--row-height));
-}
+} */
 
 .player-row > .main{
     cursor: pointer;
 }
 
-.player-row.active .champs-container{
+.champs-container.active{
     max-height: var(--row-height);
     opacity: 1;
     padding:var(--row-padding);
-}
-
-.main {
-    width: 100%;
-    padding:var(--row-padding);
-    display: grid;
-    grid-template-columns: 1fr 1fr 3fr 1fr 1fr;
-}
-
-.main > *{
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .pfp-wrapper{
@@ -144,6 +160,10 @@ i.fa-chevron-down{
     align-items: end;
     margin-top: 100px;
     margin-bottom: 50px;
+    width: 100%;
+    max-width: var(--podium-width);
+    min-width: 500px;
+
 }
 
 .player-podium > :first-child{
@@ -157,24 +177,29 @@ i.fa-chevron-down{
 .player-podium >:first-child > .pfp-wrapper > .position-text,
 .player-podium > :last-child > .pfp-wrapper > .position-text{
     font-size: 1.2rem;
+    bottom: -8px;
 }
 
 
-.player-podium > :first-child > .pfp-wrapper > .pfp,
-.player-podium > :first-child > .pfp-wrapper > .position-wrapper{
+.player-podium > :first-child > .pfp-wrapper > .pfp{
     border-color: var(--second-place);
+
+}
+.player-podium > :first-child > .pfp-wrapper > .position-wrapper{
     background-color: var(--second-place);
 }
 
-.player-podium > .player-card.peak > .pfp-wrapper > .pfp,
-.player-podium > .player-card.peak > .pfp-wrapper > .position-wrapper{
+.player-podium > .player-card.peak > .pfp-wrapper > .pfp{
     border-color: var(--first-place);
+}
+.player-podium > .player-card.peak > .pfp-wrapper > .position-wrapper{
     background-color: var(--first-place);
 }
 
-.player-podium > :last-child > .pfp-wrapper > .pfp,
-.player-podium > :last-child > .pfp-wrapper > .position-wrapper{
+.player-podium > :last-child > .pfp-wrapper > .pfp{
     border-color: var(--third-place);
+}
+.player-podium > :last-child > .pfp-wrapper > .position-wrapper{
     background-color: var(--third-place);
 }
 
@@ -205,6 +230,7 @@ i.fa-chevron-down{
     width: 100%;
     max-width: 200px;
     gap: 20px;
+    cursor: pointer;
     background-color: var(--bg-mid);
     
 }
@@ -213,11 +239,11 @@ i.fa-chevron-down{
 
 .player-card .card-text::before{
     content: '';
-    height: 60px;
+    height: 70px;
 }
 
 .player-card.peak .card-text:before {
-    height: 50px;
+    height: 85px;
 }
 
 .card-text{
@@ -227,7 +253,7 @@ i.fa-chevron-down{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 18px;
+    gap: 15px;
 }
 
 .card-name{
@@ -272,8 +298,8 @@ i.fa-chevron-down{
     position: absolute;
     color: #fff;
     left: 50%;
-    bottom: -6px;
-    font-size: 1.3rem;
+    bottom: -9px;
+    font-size: 1.35rem;
     transform: translateX(-50%);
     z-index: 2;
 }
@@ -289,4 +315,56 @@ i.fa-chevron-down{
     border-top-right-radius: 20px;
     height: calc(var(--row-height) * 2.1);
     background-color: var(--bg-light);
+}
+
+.player-card .champs-container{
+    /* position: absolute; */
+    display: flex;
+    width: var(--podium-width);
+    margin: auto;
+}
+
+
+.player-podium.active {
+    height: 100%;
+    max-height: calc(100% + var(--row-height))
+}
+
+#podium-champs-container{
+    height: 200px;
+    width: var(--podium-width);
+    margin: auto;
+    /* background-color: green; */
+    background-color: var(--bg-mid);
+    margin-bottom: 50px;
+    padding: 0 20px 0 40px;
+}
+
+.player-podium {
+    margin-bottom: 0px;
+}
+
+@media (max-width: 800px){
+    .main{
+        grid-template-columns: 1fr 2fr 1fr 1fr 1fr;
+    }
+
+    :root{
+        --podium-width: 80vw;
+    }
+    .leaderboard {
+        padding: 10px;
+    }
+    .player-podium{
+        min-width: 500px;
+    }
+    .player-card{
+        width: calc(var(--podium-width) / 3);
+    }
+}
+
+@media (max-width: 1000px){
+    .leaderboard {
+        max-width: 85vw;
+    }
 }
